<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="com.consolo.academia.ConsultarExercicioActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_nome_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_nome_exercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textCapWords|textAutoCorrect" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_serie_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_serie_exercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serie"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_repeticao_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_repeticao_exercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeticoes"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_tipo_carga_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spn_tipo_carga_exercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_de_medida" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_carga_peso_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/txt_carga_peso_exercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso_kg"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_carga_tempo_exercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <EditText
            android:id="@+id/txt_carga_tempo_exercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tempo"
            android:focusable="false"
            android:clickable="true"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>
